completed aboout us page

--- a/about-us-page/index.html
+++ b/about-us-page/index.html
@@ -55,13 +55,21 @@
     </nav>
 
     <h1 class="border-b-[0.5px] border-[#404040]"></h1>
-    <section class="pt-[112px] pb-[74px] max-w-[1280px] w-full mx-auto">
+    <section
+      class="pt-10 md:pt-[112px] pb-[74px] max-w-[1280px] w-full mx-auto"
+    >
       <h1 class="text-[38px] text-center text-[#000000]">About us</h1>
-      <div class="flex justify-between gap-[100px] items-center">
-        <img src="./image/our-mission.svg" alt="" class="w-[467px]" />
+      <div
+        class="flex flex-col-reverse md:flex-row justify-between gap-[100px] items-center px-4"
+      >
+        <img src="./image/our-mission.svg" alt="" class="md:w-[467px] w-full" />
         <div>
-          <h2 class="mb-[58px] text-[48px] text-[#000000]">Our Mission</h2>
-          <p class="text-[20px] font-karla text-[#000000]">
+          <h2
+            class="mb-10 mt-5 md:mt-0 md:mb-[58px] text-[36px] text-center md:text-left md:text-[48px] text-[#000000]"
+          >
+            Our Mission
+          </h2>
+          <p class="text-[15px] md:text-[20px] font-karla text-[#000000]">
             Our mission is to make finding and attending halal-friendly events
             effortless, accessible, and inspiring, We aim to empower organisers
             with the tools they need to showcase their events, while giving
@@ -72,10 +80,16 @@
           </p>
         </div>
       </div>
-      <div class="flex justify-between gap-[220px] items-center">
+      <div
+        class="flex justify-between md:gap-[220px] flex-col md:flex-row px-4 items-center"
+      >
         <div>
-          <h2 class="mb-[49px] text-[48px] text-[#000000]">Community First</h2>
-          <p class="text-[20px] font-karla text-[#000000]">
+          <h2
+            class="mb-10 mt-5 md:mt-0 md:mb-[58px] text-[36px] text-center md:text-left md:text-[48px] text-[#000000]"
+          >
+            Community First
+          </h2>
+          <p class="text-[15px] md:text-[20px] font-karla text-[#000000]">
             At the heart of our platform is a commitment to bringing people
             together through meaningful, halal-friendly experiences. We work
             hand-in-hand with event organisers, vendors and attendees to create
@@ -86,7 +100,7 @@
             principles.
           </p>
         </div>
-        <img src="./image/community.svg" alt="" class="w-[467px]" />
+        <img src="./image/community.svg" alt="" class="md:w-[467px] w-full" />
       </div>
     </section>
     <!-- Footer Section -->
