--- a/events-details-2/index.html
+++ b/events-details-2/index.html
@@ -54,62 +54,69 @@
     </nav>
     <h1 class="border-b-[0.5px] border-[#404040]"></h1>
     <!-- Event Banner Section -->
-    <div
-      class="bg_color text-white px-6 h-[820px] md:h-[600px] flex flex-col justify-end"
-    >
-      <div class="w-full">
-        <div
-          class="flex justify-between max-w-[1280px] flex-col md:flex-row mx-auto gap-[80px] pb-[60px]"
+    <div class="bg_color text-white px-6">
+      <div
+        class="relative max-w-[1440px] w-full mx-auto flex flex-col justify-end h-[820px] md:h-[600px]"
+      >
+        <button
+          class="bg-gradient-to-r absolute top-[75px] right-0 from-[#89EB8E] to-[#11D8F5] text-[#09090B] py-2 px-4 rounded-md text-[25px] font-normal h-[57px] w-[198px] justify-start"
         >
-          <div class="max-w-[800px] w-full text-left">
-            <h1 class="text-[48px] font-semibold mb-2">
-              Community Event Title
-            </h1>
-            <p class="text-[18px] mb-4 font-karla leading-[150%]">
-              Join us for a vibrant celebration of culture, faith, and community
-              engagement.
-            </p>
-            <div
-              class="flex flex-wrap gap-2 text-sm pb-10 text-[#09090B] font-medium"
-            >
-              <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
-                >Charity Event</span
-              >
-              <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
-                >Family Gathering</span
-              >
-              <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
-                >Cultural Festival</span
-              >
-            </div>
-          </div>
+          Buy Ticket
+        </button>
+        <div class="w-full">
           <div
-            class="grid grid-cols-2 gap-4 text-[20px] font-semibold max-w-[480px] w-full"
+            class="flex justify-between max-w-[1280px] flex-col md:flex-row mx-auto gap-[80px] pb-[60px]"
           >
-            <p>
-              Organizer: <br />
-              <span class="text-[16px] font-karla font-normal"
-                >Growing Muslim</span
+            <div class="max-w-[800px] w-full text-left">
+              <h1 class="text-[48px] font-semibold mb-2">
+                Community Event Title
+              </h1>
+              <p class="text-[18px] mb-4 font-karla leading-[150%]">
+                Join us for a vibrant celebration of culture, faith, and
+                community engagement.
+              </p>
+              <div
+                class="flex flex-wrap gap-2 text-sm pb-10 text-[#09090B] font-medium"
               >
-            </p>
-            <p>
-              Date: <br />
-              <span class="text-[16px] font-karla font-normal"
-                >September 25</span
-              >
-            </p>
-            <p>
-              Location: <br />
-              <span class="text-[16px] font-karla font-normal"
-                >UCC, Dublin, Ireland</span
-              >
-            </p>
-            <p>
-              Type: <br />
-              <span class="text-[16px] font-karla font-normal"
-                >Charity Event</span
-              >
-            </p>
+                <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
+                  >Charity Event</span
+                >
+                <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
+                  >Family Gathering</span
+                >
+                <span class="bg-[#89EB8E] px-3 py-1 rounded-full"
+                  >Cultural Festival</span
+                >
+              </div>
+            </div>
+            <div
+              class="grid grid-cols-2 gap-4 text-[20px] font-semibold max-w-[480px] w-full"
+            >
+              <p>
+                Organizer: <br />
+                <span class="text-[16px] font-karla font-normal"
+                  >Growing Muslim</span
+                >
+              </p>
+              <p>
+                Date: <br />
+                <span class="text-[16px] font-karla font-normal"
+                  >September 25</span
+                >
+              </p>
+              <p>
+                Location: <br />
+                <span class="text-[16px] font-karla font-normal"
+                  >UCC, Dublin, Ireland</span
+                >
+              </p>
+              <p>
+                Type: <br />
+                <span class="text-[16px] font-karla font-normal"
+                  >Charity Event</span
+                >
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -124,12 +131,12 @@
             class="border-[1.5px] border-[#000000] md:border-none font-normal p-2 text-[#000000] text-[18px] md:text-[20px] mb-4 flex items-center justify-between"
           >
             Event Overview
-            <span>
+            <!-- <span>
               <img
                 src="./image/arrow_down.jpg"
                 alt="chevron_right"
                 class="h-auto w-auto block md:hidden"
-            /></span>
+            /></span> -->
           </h2>
           <div
             class="border-[1.5px] border-[#000000] text-[18px] md:text-[20px] font-bold px-4 py-3 mb-2"
