--- a/updated-home/index.html
+++ b/updated-home/index.html
@@ -61,11 +61,29 @@
 
     <!-- Search Section -->
     <section class="bg-[#F3FFEB] py-8">
-      <div class="max-w-[1440px] mx-auto px-8">
-        <h2 class="text-black text-[48px] font-semibold text-center mb-6">
+      <div class="max-w-[1440px] mx-auto w-full px-8">
+        <h2
+          class="text-black text-[36px] md:text-[48px] font-semibold text-center mb-6"
+        >
           Search Upcoming Events Near You
         </h2>
-        <img src="./image/search-image.svg" alt="" class="mx-auto" />
+        <div
+          class="flex items-center w-full max-w-[900px] mx-auto rounded-full border-[6px] border-[#000000] bg-[#F3FFEB] text-[#000000]"
+        >
+          <input
+            type="text"
+            placeholder="Search..."
+            class="w-full px-4 py-2 text-[#000000] bg-transparent border-none outline-none rounded-l-full focus:ring-0"
+          />
+          <div class="p-2">
+            <button
+              type="button"
+              class="px-2 py-2 bg-teal-300 text-[#000000] font-semibold rounded-full w-[100px] text-[12px]"
+            >
+              Find event
+            </button>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -333,8 +351,14 @@
     </section>
 
     <section class="p-4 md:px-2 md:py-8 max-w-[1380px] mx-auto">
-      <img src="./image/create-img.svg" alt="" class="mx-auto" />
-      <div class="grid grid-cols-3 items-center max-w-[1280px] mx-auto">
+      <img
+        src="./image/create-img.svg"
+        alt=""
+        class="mx-auto hidden md:block"
+      />
+      <div
+        class="grid grid-cols-1 md:grid-cols-3 items-center max-w-[1280px] mx-auto"
+      >
         <div class="text-center max-w-[260px] mx-auto w-full">
           <h2 class="text-[#000000] text-[48px] font-semibold mb-[18px]">
             Create
@@ -366,7 +390,9 @@
     <section
       class="flex items-center lg:flex-row flex-col gap-[30px] max-w-[1380px] mx-auto pt-20 pb-[100px] justify-between"
     >
-      <h1 class="font-semibold text-[64px] text-center lg:text-left">
+      <h1
+        class="font-semibold text-[36px] md:text-[64px] text-center lg:text-left"
+      >
         Start your Ticketin’ Journey
       </h1>
       <button
