responsive product page

--- a/support-page/index.html
+++ b/support-page/index.html
@@ -56,90 +56,101 @@
 
     <h1 class="border-b-[0.5px] border-[#404040]"></h1>
     <!-- Support Section -->
-    <section class="pt-[56px] pb-[106px] bg-[#F3FFEB] max-w-[1280px] mx-auto">
-      <div
-        class="p-[7px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5]"
-      >
-        <form class="p-6 bg-[#F3FFEB] rounded-[7px]">
-          <div class="pl-[81px]">
-            <h1 class="text-[38px] text-left text-[#000000]">
+    <section
+      class="pt-10 pb-16 bg-[#F3FFEB] max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
+    >
+      <div class="p-1 rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5]">
+        <div class="p-6 bg-[#F3FFEB] rounded-[7px]">
+          <div class="pl-4 sm:pl-8">
+            <h1 class="text-3xl sm:text-4xl text-left text-[#000000]">
               Send us a message
             </h1>
-            <p class="text-left text-[#000000] mb-8 text-[15px]">
+            <p class="text-left text-[#000000] mb-6 text-sm sm:text-base">
               Please fill in the form below to get in touch with us
             </p>
           </div>
           <div
-            class="flex flex-col md:flex-row justify-between pl-[20px] pr-[40px] mb-[90px]"
+            class="flex flex-col md:flex-row justify-between gap-4 sm:gap-6 px-4 mb-10 sm:mb-16"
           >
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md"
             >
               <input
                 type="text"
                 placeholder="First name"
-                class="bg-[#F3FFEB] p-5 rounded-[10px] w-[445px]"
+                class="bg-[#F3FFEB] p-4 rounded-[10px] w-full max-w-[445px] md:w-[445px]"
               />
             </div>
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md"
             >
               <input
                 type="text"
                 placeholder="Last name"
-                class="bg-[#F3FFEB] p-5 rounded-[10px] w-[445px]"
+                class="bg-[#F3FFEB] p-4 rounded-[10px] w-full max-w-[445px] md:w-[445px]"
               />
             </div>
           </div>
           <div
-            class="flex flex-col md:flex-row justify-between pl-[20px] pr-[40px] mb-[69px]"
+            class="flex flex-col md:flex-row justify-between gap-4 sm:gap-6 px-4 mb-10 sm:mb-14"
           >
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md"
             >
               <input
-                type="text"
+                type="email"
                 placeholder="Email address"
-                class="bg-[#F3FFEB] p-5 rounded-[10px] w-[445px]"
+                class="bg-[#F3FFEB] p-4 rounded-[10px] w-full max-w-[445px] md:w-[445px]"
               />
             </div>
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md"
             >
               <input
-                type="text"
+                type="tel"
                 placeholder="Phone number"
-                class="bg-[#F3FFEB] p-5 rounded-[10px] w-[445px]"
+                class="bg-[#F3FFEB] p-4 rounded-[10px] w-full max-w-[445px] md:w-[445px]"
               />
             </div>
           </div>
-          <div class="mb-4 w-[991px] mx-auto">
+          <div class="mb-4 w-full max-w-[991px] mx-auto px-4">
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)] h-[209px]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md h-[150px] sm:h-[200px]"
             >
               <textarea
                 placeholder="Message"
-                class="bg-[#F3FFEB] p-5 rounded-[10px] w-full h-full"
+                class="bg-[#F3FFEB] p-4 rounded-[10px] w-full h-full resize-none"
               ></textarea>
             </div>
-            <label class="flex items-center mt-5 pl-5 mb-10 text-[15px]">
+            <label
+              class="flex items-center mt-4 pl-2 mb-6 text-sm sm:text-base"
+            >
               <input type="checkbox" class="mr-2" />
               I've read and agree with the Terms of Service and Privacy Policy
             </label>
             <div
-              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_4px_4px_rgba(0,0,0,0.25)] w-[209px]"
+              class="p-[3px] rounded-xl bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-md w-full max-w-[209px] mx-auto md:mx-0"
             >
               <button
-                type="submit"
-                class="bg-[#F3FFEB] rounded-[10px] w-full px-5 py-2 text-[32px]"
+                type="button"
+                class="bg-[#F3FFEB] rounded-[10px] w-full px-5 py-2 text-lg sm:text-2xl font-medium"
+                onclick="handleSubmit()"
               >
                 Submit
               </button>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </section>
+    <script>
+      function handleSubmit() {
+        // Add form submission logic here (e.g., collect input values and send to server)
+        alert(
+          "Form submission triggered. Implement your submission logic here."
+        );
+      }
+    </script>
     <!-- Footer Section -->
     <footer class="bg-[#C8F1F7] p-20">
       <div class="max-w-[1380px] mx-auto">
