--- a/pricing-page/index.html
+++ b/pricing-page/index.html
@@ -59,24 +59,26 @@
     <section class="pt-[48px] pb-[72px] bg-[#F3FFEB] relative">
       <!-- ticket in our right way section -->
       <div class="max-w-[1440px] mx-auto w-full relative overflow-hidden">
-        <div>
+        <div class="px-4 z-50 relative">
           <h2
             class="bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] text-[#09090B] text-[48px] w-[377px] text-center mx-auto rounded-[16px]"
           >
             Halal Ticketin'
           </h2>
-          <p class="text-center text-[#09090B] text-[38px]">
+          <p
+            class="text-center text-[#09090B] text-[20px] md:text-[38px] z-50 bg-[#F3FFEB] md:bg-inherit rounded-[10px] mt-2 md:mt-0"
+          >
             Ticketin' the right way
           </p>
         </div>
         <!-- card section -->
         <div
-          class="flex items-end gap-6 mt-16 relative z-20 max-w-[1011px] mx-auto w-full"
+          class="flex md:items-end items-center flex-col md:flex-row gap-6 mt-16 relative z-20 max-w-[1011px] mx-auto w-full"
         >
           <img
             src="./image/Eur.svg"
             alt=""
-            class="absolute top-0 right-[42%] z-10"
+            class="absolute -top-11 md:top-0 md:right-[42%] z-10"
           />
           <div
             class="border border-[#000000] relative h-[340px] rounded-t-[20px] w-[320px] shadow-[0_4px_4px_rgba(0,0,0,0.25)] bg-[#F3FFEB] z-30"
@@ -184,14 +186,13 @@
         <img
           src="./image/tikatin-right-1.svg"
           alt=""
-          class="absolute right-0 top-0 z-10"
+          class="absolute right-0 top-0 z-10 hidden md:block"
         />
         <img
           src="./image/tikatin-right-2.svg"
           alt=""
           class="absolute right-0 bottom-0 z-10"
         />
-        <!-- left icons - positioned behind cards -->
         <img
           src="./image/tikatin-left-1.svg"
           class="absolute left-0 top-0 z-10"
@@ -204,7 +205,7 @@
         />
       </div>
     </section>
-    <section>
+    <!-- <section>
       <div
         class="max-w-[1011px] mx-auto w-full flex justify-between items-center mb-8"
       >
@@ -337,7 +338,7 @@
         <img src="./image/toggle-icon.svg" alt="" />
         <p class="text-[20px] text-[#000000]">Pass on fees</p>
       </div>
-    </section>
+    </section> -->
     <!-- Footer Section -->
     <footer class="bg-[#C8F1F7] p-20">
       <div class="max-w-[1380px] mx-auto">
