updated icond in the home page

--- a/updated-home/index.html
+++ b/updated-home/index.html
@@ -351,15 +351,11 @@
     </section>
 
     <section class="p-4 md:px-2 md:py-8 max-w-[1380px] mx-auto">
-      <img
-        src="./image/create-img.svg"
-        alt=""
-        class="mx-auto hidden md:block"
-      />
       <div
         class="grid grid-cols-1 md:grid-cols-3 items-center max-w-[1280px] mx-auto"
       >
         <div class="text-center max-w-[260px] mx-auto w-full">
+          <img class="mb-4" src="./image/Icon 1.svg" alt="" />
           <h2 class="text-[#000000] text-[48px] font-semibold mb-[18px]">
             Create
           </h2>
@@ -369,6 +365,7 @@
           </p>
         </div>
         <div class="text-center max-w-[260px] mx-auto w-full">
+          <img class="mb-4" src="./image/Icon 2 .svg" alt="" />
           <h2 class="text-[#000000] text-[48px] font-semibold mb-[18px]">
             Sell
           </h2>
@@ -378,6 +375,7 @@
           </p>
         </div>
         <div class="text-center max-w-[260px] mx-auto w-full">
+          <img class="mb-4" src="./image/Icon 3.svg" alt="" />
           <h2 class="text-[#000000] text-[48px] font-semibold mb-[18px]">
             Manage
           </h2>
